# mermaid2conf

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  install_kiro_prompt.sh  kiro-publish-processing.sh  kiro-publish-to-confluence.py  md2conf-mermaid.py  pyproject.toml
.github/workflows/: publish.yml
skills/markdown-to-confluence/: SKILL.md
skills/mermaid2conf/: SKILL.md
skills/mermaid2conf/scripts/: pyproject.toml
skills/mermaid2conf/scripts/src/markdown_to_confluence/: diff_sections.py  mermaid.py  publish.py  spec_links.py
src/markdown_to_confluence/: __init__.py  cli.py  compat.py  mermaid.py  processing.py  publish.py
