[project]
requires-python = ">= 3.12"
name = "mermaid2conf"
authors = [{ name = "Craig Wetzelberger" }]
version = "1.0.0"
readme = "README.md"
dependencies = [
    "mistune>=3.2.0",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]

[project.scripts]
mermaid2conf = "markdown_to_confluence.cli:main"
kiro-publish-processing = "markdown_to_confluence.processing:legacy_main"
kiro-publish-to-confluence = "markdown_to_confluence.publish:legacy_main"
md2conf-mermaid = "markdown_to_confluence.mermaid:legacy_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/markdown_to_confluence"]

[tool.uv]
environments = [
  "sys_platform == 'darwin'",
  "sys_platform == 'linux'",
]
